--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#1C1C1C</color>
+    <color name="white">#F0F0F0</color>
+    <color name="yellow">#FED301</color>
+    <color name="orange">#f08e35</color>
+    <color name="lightblue">#00BBFF</color>
 </resources>
